fixed z-index of elements, need to look into reimplementing scaling for different sizes

--- a/common/css/browser_source/required.css
+++ b/common/css/browser_source/required.css
@@ -6,27 +6,35 @@ html, body {
 }
 
 /* Slideshow container */
-.slideshow-container {
+#logoSlideshowDiv {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* margin: auto; */
+    z-index: 5;
+    width: fit-content;
+    height: fit-content;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
 }
 
 .mySlides {
     position: relative;
-    z-index: 15;
-    width: auto;
-    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+    z-index: 5;
+}
+
+#customLogo3, #customLogo4, #customLogo5 {
+    height: 400px;
+    width: auto;
+    object-fit: contain;
+    position: relative;
 }
 
 #videoContainer {
@@ -35,7 +43,6 @@ html, body {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 12;
     pointer-events: none;
     display: flex;
     justify-content: center;
@@ -66,7 +73,7 @@ html, body {
     max-width: fit-content; 
     padding: 5px 20px;
     overflow: hidden;
-    z-index: 8;
+    z-index: 2;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);
 }
 
@@ -74,7 +81,7 @@ html, body {
     position: fixed;
     top: 1%;
     right: 1%; 
-    z-index: 9;
+    z-index: 3;
     background-color: rgba(128, 128, 128, 0.7); /* Opaque grey with 70% opacity */
     border: 2px solid black;
     border-radius: 30px; /* Rounded on left side only */
@@ -86,7 +93,7 @@ html, body {
 
 .ball {
     margin: 0 5px 5px 0;
-    z-index: 10;
+    z-index: 3;
 }
 
 /* Main container */
@@ -97,7 +104,7 @@ html, body {
     align-items: center;
     width: 90%;
     /* max-width: 800px; */
-    z-index: 3;
+    z-index: 2;
     bottom: 1%;
     left: 0;
     right: 0;
@@ -114,6 +121,7 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 2;
 }
 
 /* Update shotClock styling */
@@ -159,27 +167,6 @@ html, body {
     transform-origin: left center;
 }
 
-/* .startTimer {
-    width: 0px;
-    transition: width 30s;
-    transition-timing-function: linear;
-}
-.start60 {
-    width: 0px;
-    transition-property: width;
-    transition-duration: 60s;
-    transition-timing-function: linear;
-} */
-
-/* .greenBtn {
-    background:green;
-    color:white;
-}
-.redBtn {
-    background:red;
-    color:white;
-} */
-
 .shotRed {
     color:white;
 }
@@ -193,6 +180,7 @@ html, body {
     align-items: center;
     width: 100%;
     gap: 0; /* No gap between flex items */
+    z-index: 2;
 }
 
 /* Player containers */
@@ -224,21 +212,21 @@ html, body {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);
     font-weight: bold;
     text-align: center;
-    padding: 5px 10px;
     width: 550px;
     overflow: hidden;
+    text-overflow: ellipsis;
     border: 2px solid black;
-    z-index: 10;
+    z-index: 2;
 }
 
 #player1Name {
     background-image: linear-gradient(to left, white, steelblue);
-    /* margin-right: 5px; */
+    padding: 5px 15px;
 }
 
 #player2Name {
     background-image: linear-gradient(to right, white, steelblue);
-    /* margin-left: 5px; */
+    padding: 5px 15px;
 }
 
 .score-logo-container {
@@ -258,7 +246,7 @@ html, body {
     padding: 5px 10px;
     min-width: 50px;
     border: solid black;
-    z-index: 11;
+    z-index: 2;
 }
 
 #player1Score {
@@ -283,7 +271,7 @@ html, body {
     height: 100%;
     aspect-ratio: 1 / 1; /* For a square aspect ratio */
     object-fit: cover;
-    z-index: 14;
+    z-index: 3;
 }
 
 .customLogo1 {
@@ -292,13 +280,6 @@ html, body {
 
 .customLogo2 {
     left: 100%;
-}
-
-#customLogo3, #customLogo4, #customLogo5 {
-    height: 400px;
-    width: auto;
-    max-width: 80%;
-    object-fit: contain;
 }
 
 #raceInfo {
@@ -313,7 +294,7 @@ html, body {
     padding: 5px 10px;
     margin: 0 5px 0 5px;
     border: 2px solid black;
-    z-index: 11;
+    z-index: 2;
 }
 
 .ext-image-container {
@@ -330,7 +311,7 @@ html, body {
     padding: 5px 10px;
     -webkit-text-stroke: 1px black;
     text-shadow: 1px 1px 2px black, 0 0 25px black, 0 0 5px black;
-    z-index: 11;
+    z-index: 3;
 }
 
 #p1ExtIcon {
@@ -356,7 +337,7 @@ html, body {
     box-sizing: border-box; /* Includes border in the height calculation */
     height: 100%;
     width: 20%;
-    z-index: 16;
+    z-index: 4;
     /* top: 50%; */
 }
 
